Updated category page pagination & design changes:

--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -428,7 +428,11 @@ font-size: 12px!important;
 	cursor: pointer;
 }
 .mini-cart-total {
-	text-align: right;
+    color: #F5F4F4;
+    display: block;
+    margin: 0;
+    padding: 0 0 0;
+	clear:both;
 }
 .mini-cart-total table {
 	border-collapse: collapse;
@@ -449,8 +453,22 @@ font-size: 12px!important;
 	text-align: center;
 }
 .checkout{
-color: #000;
+    color: #F5F4F4;
+    display: block;
+    margin: 0;
+    padding: 0px 0 0;
+	float:right;
 }
+
+.all_page_right .checkout{
+    color: #000000;
+    display: block;
+    float: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
+
 #login a{
     background: none repeat scroll 0 0 transparent;
     color: #000000 !important;
@@ -469,7 +487,7 @@ color: #000;
 }
 .checkout a{
     background: none repeat scroll 0 0 #046DD8;
-    color: #FFFFFF !important;
+    color: #FFFFFF ;
     font-size: 14px;
     padding: 5px 12px;
     text-decoration: none !important;
@@ -480,13 +498,15 @@ color: #fff!important;
 text-decoration:none!important;
 }
 .name a{
-color: #000!important;
-text-decoration:none!important;
-font-weight:normal;
+    background: none repeat scroll 0 0 transparent;
+    color: #0A4194 !important;
+    font-weight: bold;
+    text-decoration: none !important;
 }
 .name a:hover{
 color: #000!important;
 text-decoration:underline!important;
+background: none repeat scroll 0 0 transparent;
 }
 #header #search {
 	position: absolute;
@@ -972,6 +992,7 @@ table.radio label {
 
 a.button, input.button {
 	cursor: pointer;
+	 border-radius: 0 0 0 0;
 	color: #FFFFFF!important;
 	line-height: 12px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -1026,7 +1047,7 @@ a.button:hover, input.button:hover {
 .htabs a {
 	background: none repeat scroll 0 0 #046DD8;
 	color: #FFFFFF;
-	display: none;
+	margin:0 5px 0 0;
 	float: left;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size: 16px;
@@ -1432,13 +1453,16 @@ a.button:hover, input.button:hover {
 .product-info .description {
 	border-top: 1px solid #E7E7E7;
 	border-bottom: 1px solid #E7E7E7;
-	padding: 5px 5px 10px 5px;
-	margin-bottom: 10px;
-	line-height: 20px;
-	color: #4D4D4D;
+    color: #4D4D4D;
+    font-size: 13px;
+    line-height: 20px;
+    margin-bottom: 10px;
+    padding: 3px 5px;
 }
 .product-info .description span {
-	color: #38B0E3;
+	color: #0A4194 ;
+	padding-left: 25px;
+	font-weight: bold;
 }
 .product-info .description a {
 	color: #4D4D4D;
@@ -1521,6 +1545,7 @@ a.button:hover, input.button:hover {
 	border-left: 1px solid #E7E7E7;
 	border-right: 1px solid #E7E7E7;
 	margin-bottom: 10px;
+	cursor:pointer;
 }
 .product-info .review > div {
 	padding: 8px;
@@ -1885,19 +1910,30 @@ a.button:hover, input.button:hover {
 
 
 .checkout-heading {
-	background: #57B05C;
-	border: 1px solid #DBDEE1;
-	padding: 8px;
-	font-weight: bold;
-	font-size: 13px;
-	color: #fff;
-	margin-bottom: 15px;
+    background: none repeat scroll 0 0 #EAEAEA;
+    border: 1px solid #ccc;
+    color: #000000;
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    padding: 8px;
 }
 .checkout-heading a {
-	float: right;
-	margin-top: 1px;
-	font-weight: normal;
-	text-decoration: none;
+    background: none repeat scroll 0 0 transparent;
+    color: #000000 !important;
+    float: right;
+    font-weight: normal;
+    margin-top: 1px;
+    padding: 0;
+    text-decoration: none;
+}
+.colorbox{
+    background: none repeat scroll 0 0 transparent!important;
+    color: #000000 !important;
+    display: block;
+    font-size: 12px!important;
+    padding: 5px 12px;
+    text-decoration: none !important;
 }
 .checkout-content {
 	padding: 0px 0px 15px 0px;
@@ -2274,7 +2310,7 @@ h3 {
 	margin-bottom: 20px !important;
 	width: 1002px !important;
 	margin: 0 auto;
-	padding: 20px 0 10px;
+	padding: 0px 0 10px;
 }
 .home .box .box-heading {
 	-webkit-border-radius: 7px 7px 0px 0px;
@@ -2326,8 +2362,8 @@ h3 {
     display: inline-block;
 	vertical-align: top;
 	margin-right: 10px;
-	min-height:340px;
-	margin-bottom: 20px;
+	min-height:310px;
+	margin-bottom: 10px;
 }
 #column-left + #column-right + #content .home .box-product > div {
 	width: 119px;
@@ -2513,15 +2549,17 @@ h3 {
 	margin-left:10px;
 }
 .shoping_bag .content {
-    background: none repeat scroll 0 0 #FFFFFF;
-	border:none;
+    background: none repeat scroll 0 0 #F5F4F4;
+    border: medium none;
     border-radius: 0 0 5px 5px;
-    color: #000 !important;
+    box-shadow: 0 2px 2px 2px #999;
+    color: #000000 !important;
+    display: block;
     margin: 4px 0 0;
-    padding: 8px;
-    position: relative;
+    padding: 5px;
+    position: absolute;
+    width: 335px;
     z-index: 9999;
-	box-shadow: 0 2px 2px 2px #CCCCCC;
 }
 .shoping_bag h4 {
 	background: url(../image/new-cart-img.png) no-repeat scroll 158px bottom transparent;
