--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -898,7 +898,7 @@ table.form td {
 	padding: 4px;
 }
 input.large-field, select.large-field {
-	width: 300px;
+	width: 200px;
 }
 table.list {
 	border-collapse: collapse;
@@ -2670,4 +2670,104 @@ display:block;
 .product_page .cont_btm_pt .box .box-content .box-product .img1 {
 	float: left;
 	width: 235px;
+}
+/*TABS CSS*/
+
+/* root element for tabs  */
+ul.css-tabs {
+    margin:0 !important;
+    padding:0;
+    height:30px;
+    border-bottom:1px solid #666;
+}
+
+/* single tab */
+ul.css-tabs li {
+    float:left;
+    padding:0;
+    margin:0;
+    list-style-type:none;
+}
+
+/* link inside the tab. uses a background image */
+ul.css-tabs a {
+    float:left;
+    font-size:13px;
+    display:block;
+    padding:5px 30px;
+    text-decoration:none;
+    border:1px solid #666;
+    border-bottom:0px;
+    height:18px;
+    background-color:#efefef;
+    color:#777;
+    margin-right:2px;
+    position:relative;
+    top:1px;
+    outline:0;
+    -moz-border-radius:4px 4px 0 0;
+}
+
+ul.css-tabs a:hover {
+    background-color:#F7F7F7;
+    color:#333;
+}
+
+/* selected tab */
+ul.css-tabs a.current {
+    background-color:#ddd;
+    border-bottom:1px solid #ddd;
+    color:#000;
+    cursor:default;
+}
+
+
+/* tab pane */
+div.css-panes > div:first-child {
+    display:none;
+    border:1px solid #666;
+    border-width:0 1px 1px 1px;
+    min-height:150px;
+    padding:15px 20px;
+    background-color:#ddd;
+}
+/*Checkout page*/
+.user-checkout-choice{
+    display: block !important;
+}
+
+.form-field-left{
+    float: left;
+    width: 170px;
+}
+
+
+.form-field-input, .form-field-input-half, .form-field-input-full{
+    border: 1px solid #D5D5D5;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset;
+    display: block;
+    font-size: 16px;
+    margin-bottom: 25px;
+    padding: 8px 10px 6px 8px;
+    
+}
+.form-field-input-half {    
+    width: 151px;
+}
+.form-field-input-full {
+   
+    width: 323px;
+}
+.form-field-left, .form-field-full  label {
+    color: #666666;
+    display: block;
+    float: left;
+    font-size: 14px;
+    font-weight: bold;
+}
+.form-field-full label{
+    width: 340px;
+}
+#guest-buy-error{
+    border: 1px solid;
 }
