--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -898,7 +898,7 @@ table.form td {
 	padding: 4px;
 }
 input.large-field, select.large-field {
-	width: 200px;
+	width: 300px;
 }
 table.list {
 	border-collapse: collapse;
@@ -2364,6 +2364,7 @@ h3 {
 	margin-right: 10px;
 	min-height:310px;
 	margin-bottom: 10px;
+	float:left;
 }
 #column-left + #column-right + #content .home .box-product > div {
 	width: 119px;
@@ -2380,6 +2381,7 @@ h3 {
 }
 .home .box-product .name {
 	text-align:center;
+	    width: 235px;
 }
 .home .box-product .price {
 	text-align:center;
@@ -2559,7 +2561,7 @@ h3 {
     padding: 5px;
     position: absolute;
     width: 335px;
-    z-index: 9999;
+    z-index: 999999;
 }
 .shoping_bag h4 {
 	background: url(../image/new-cart-img.png) no-repeat scroll 158px bottom transparent;
@@ -2671,6 +2673,7 @@ display:block;
 	float: left;
 	width: 235px;
 }
+
 /*TABS CSS*/
 
 /* root element for tabs  */
@@ -2749,13 +2752,13 @@ div.css-panes > div:first-child {
     font-size: 16px;
     margin-bottom: 25px;
     padding: 8px 10px 6px 8px;
-    
+
 }
-.form-field-input-half {    
+.form-field-input-half {
     width: 151px;
 }
 .form-field-input-full {
-   
+
     width: 323px;
 }
 .form-field-left, .form-field-full  label {
