--- a/catalog/view/theme/squareofone/stylesheet/superfish.css
+++ b/catalog/view/theme/squareofone/stylesheet/superfish.css
@@ -30,7 +30,7 @@
 .sf-menu li:hover ul,
 .sf-menu li.sfHover ul {
 	left:			0;
-	top:			2.5em; /* match top ul list item height */
+	top:			35px; /* match top ul list item height */
 	z-index:		99;
 }
 ul.sf-menu li:hover li ul,
@@ -64,14 +64,19 @@ ul.sf-menu li li li.sfHover ul {
 	text-decoration:none;
 }
 .sf-menu a, .sf-menu a:visited  { /* visited pseudo selector so IE6 applies text colour*/
-	color:			#13a;
+	color:			#fff;
+}
+.sf-menu a:hover { /* visited pseudo selector so IE6 applies text colour*/
+	color:			#000;
 }
 .sf-menu li {
 /*	background:		#BDD2FF;*/
 background: transparent;
+padding:7px 15px 12px;
 }
 .sf-menu li li {
-	background:		#57B05C;
+	background:		none;
+	
 }
 .sf-menu li li li {
 /*	background:		#9AAEDB;*/
@@ -84,7 +89,7 @@ background: transparent;
 
 /*** arrows **/
 .sf-menu a.sf-with-ul {
-	padding-right: 	2.25em;
+	padding-right: 	18px;
 	min-width:		1px; /* trigger IE7 hasLayout so spans position accurately */
 }
 .sf-sub-indicator {
@@ -99,9 +104,9 @@ background: transparent;
 	background:		url('../image/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
 }
 a > .sf-sub-indicator {  /* give all except IE6 the correct values */
-	top:			.8em;
+	top:5px;
 	background-position: 0 -100px; /* use translucent arrow for modern browsers*/
-        right: 5px;
+        right: 0px;
 }
 /* apply hovers to modern browsers */
 a:focus > .sf-sub-indicator,
