--- a/catalog/view/theme/squareofone/stylesheet/style.css
+++ b/catalog/view/theme/squareofone/stylesheet/style.css
@@ -1806,7 +1806,7 @@ body {
 
 
 
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Trebuchet MS, Helvetica, sans-serif;
 
 
 
@@ -1829,7 +1829,7 @@ body {
 
 
 
-
+letter-spacing: 1px;
 }
 
 
@@ -9100,7 +9100,7 @@ h7 {
 
 
 
-    min-height: 334px;
+    min-height: 348px;
 
     margin:0 0 15px 17px;
 
