Added PHP list in footer, fixed pincode checking in registration, fixed css, renamed Continue Shopping to Shopping

--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -444,6 +444,7 @@ font-size: 12px!important;
 	color: #000;
 	font-size: 12px;
 	padding: 4px;
+        width: 80%;
 }
 #header #cart .checkout {
 	text-align: right;
