Fixed top category bug, fixed one page checkout bug, added css min in header.tpl, add classes in topcategory

--- a/catalog/view/theme/squareofone/stylesheet/style.css
+++ b/catalog/view/theme/squareofone/stylesheet/style.css
@@ -9269,7 +9269,7 @@ h7 {
 
 
 
-.prc span {
+.prc .discount {
 
 
 
@@ -9399,12 +9399,10 @@ h7 {
 
 }
 
-.prc_right span{
+.prc_right .discount{
     color: #FF0000;
     text-decoration: line-through;
 }
-
-
 
 
 
