Fixed Css issues in checkout, Fixed the country bug, corrected Newsletter url in footer, add check to load minified js & css differently in local and server, add COD check for pincode

--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -2730,8 +2730,8 @@ div.css-panes > div:first-child {
     font-size: 12px;
     font-weight: bold;
 }
-.form-field-full label{
-
+#guest-buy fieldset {
+    border: 0px none;
 }
 #guest-buy-error{
     border: 1px solid;
