Fixed the shipping problem & CSS issue

--- a/catalog/view/theme/squareofone/stylesheet/style.css
+++ b/catalog/view/theme/squareofone/stylesheet/style.css
@@ -2070,7 +2070,7 @@ letter-spacing: 1px;
 
 
 
-    <<<<<<< HEAD padding:0 0 20px 0;
+padding:0 0 20px 0;
 
 
 
@@ -2078,15 +2078,7 @@ letter-spacing: 1px;
 
 
 
-    ======= padding:0 0 20px 0;
-
-
-
-
-
-
-
-    >>>>>>> 8750d78e40d5df5a076abef25a3614a69108401e    /*	width:100%;*/    text-align:center;
+/*	width:100%;*/    text-align:center;
 
 
 
