--- a/catalog/view/theme/squareofone/stylesheet/stylesheet.css
+++ b/catalog/view/theme/squareofone/stylesheet/stylesheet.css
@@ -1832,7 +1832,7 @@ a.button:hover, input.button:hover {
 }
 .cart-total table {
 	float: right;
-        
+        width: 220px;
 }
 .cart-total td {
 	padding: 3px;
