--- a/catalog/view/theme/squareofone/stylesheet/superfish.css
+++ b/catalog/view/theme/squareofone/stylesheet/superfish.css
@@ -50,6 +50,7 @@ ul.sf-menu li li li:hover ul,
 ul.sf-menu li li li.sfHover ul {
 	left:			10em; /* match ul width */
 	top:			0;
+        border-bottom: 1px #fff solid;
 }
 
 /*** DEMO SKIN ***/
@@ -58,9 +59,9 @@ ul.sf-menu li li li.sfHover ul {
 	margin-bottom:	1em;
 }
 .sf-menu a {
-	border-left:	1px solid #fff;
-	border-top:		1px solid #CFDEFF;
-	padding: 		.75em 1em;
+	/*border-left:	1px solid #fff;
+	border-top:		1px solid #CFDEFF;*/
+	padding: 		-1.25em 1em;
 	text-decoration:none;
 }
 .sf-menu a, .sf-menu a:visited  { /* visited pseudo selector so IE6 applies text colour*/
@@ -76,6 +77,7 @@ padding:7px 15px 12px;
 }
 .sf-menu li li {
 	background:		none;
+        border-top: 1px #fff solid;
 	
 }
 .sf-menu li li li {
@@ -84,6 +86,7 @@ padding:7px 15px 12px;
 .sf-menu li:hover, .sf-menu li.sfHover,
 .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
 /*	background:		#CFDEFF;*/
+        border-bottom: 1px;
 	outline:		0;
 }
 
@@ -141,4 +144,7 @@ li.sfHover > a > .sf-sub-indicator {
 }
 .sf-shadow ul.sf-shadow-off {
 	background: transparent;
+}
+.innerUl{
+
 }
